added google verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="google-site-verification" content="hFGcKrrcfetMgcAGHJRv9wVbCR6xNc93vHD9hNPpvLk">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="author" content="Greg Zynda">
 		<meta name="keywords" content="bioinformatics,IU,methylation,epigenetics,hpc,make,hacking">
