--- a/css/main.css
+++ b/css/main.css
@@ -129,9 +129,10 @@ a:hover   { color: #000; }
 }
 
 .post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
+	border: 1px solid #ddd;
+	background-color: #eef;
+	padding: 0 .2em;
+	font-size: 120%;
 }
 
 .post pre code {
