trying zebra table

--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ a:hover   { color: #000; }
 
 .post table th {
 	background-color: #333333;
-	font-color: white;	
+	color: white;	
 }
 
 .post table td {
