--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="/css/main.css">
 		<SCRIPT LANGUAGE="JavaScript" SRC="/js/main.js"></SCRIPT>
+		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	</head>
 	<body>
 		<div class="site">
