--- a/css/main.css
+++ b/css/main.css
@@ -120,10 +120,10 @@ a:hover   { color: #000; }
 	margin: 0 auto;
 }
 
-.post span {
+.post #date {
 	font-style: italic;
 	text-align: right;
-	/*font-size: 70%;*/
+	font-size: 70%;
 }
 
 .post ul, .post ol {
