--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,5 @@ layout: default
 	<h2>{{ page.title }}</h2>
 	<!--<hr color="#555152" width="60%" noshade size="1">-->
 	{{ content }}
-	<p style="text-align:right;"><span id="date">{{ page.date | date_to_string }}</span></p>
+	<p><span id="date">{{ page.date | date_to_string }}</span></p>
 </div>
