--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,10 @@ a:hover   { color: #000; }
 	background-color: white;
 }
 
-.posts span {
+.posts #date {
 	font-style: italic;
 	text-align: right;
-	/*font-size: 70%;*/
+	font-size: 70%;
 }
 
 /*****************************************************************************/
