--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,10 @@ body {
 }
 
 h1, h2 { font-size: 150%;}
-h3, h4, h5, h6 { font-size: 100%;}
+h3, h4, h5, h6 {
+  font-size: 125%;
+  color:#555152;
+}
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
 
