--- a/css/main.css
+++ b/css/main.css
@@ -112,9 +112,11 @@ a:hover   { color: #000; }
 }
 	
 .post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
+	border: 1px solid #ddd;
+	background-color: #eef;
+	padding: 0.4em .4em;
+	margin: 1em 0;
+	overflow-x: auto;
 }
 
 .post img {
@@ -134,8 +136,8 @@ a:hover   { color: #000; }
 }
 
 .post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
+	border: 1px solid #ddd;
+	background-color: #eef;
 }
 
 .javascript {
