Updated year range to be dynamic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
 			{{ content }}
 
-			<div class="footer"><p>&copy;2017 Gregory J Zynda.</p></div>
+			<div class="footer"><p>&copy;2017-<script type="text/javascript">document.write( new Date().getFullYear() );</script> Gregory J Zynda.</p></div>
 		</div>
 	</body>
 	<script type="text/javascript">
